[RED] RESET FROM BEGINNING Add test for Order controller